target tec added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,79 +14,103 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div id="header">
         <img src="./assets/Group.png" alt="">
-      <h1>"In the near future, I hope to become a Developer."</h1>
-      <p>Passionate Aspiring Developer | Crafting Code and Dreams | Exploring the Digital Frontier | Building Tomorrow's Solutions</p>
-      <button id="contact-button">Contact with me</button>
+        <h1>"In the near future, I hope to become a Developer."</h1>
+        <p>Passionate Aspiring Developer | Crafting Code and Dreams | Exploring the Digital Frontier | Building
+            Tomorrow's Solutions</p>
+        <button id="contact-button">Contact with me</button>
     </div>
     <div id="why-webdevlopment-section">
         <div id="web-dev-header">
             <h3>Why Web Development??</h3>
-        <p>Web development can increase accessibility, generate more leads, improve business productivity, and build brand identity1. 🌐💡</p>
+            <p>Web development can increase accessibility, generate more leads, improve business productivity, and build
+                brand identity1.</p>
         </div>
         <div class="why-web-development">
-           
-          <div >
-            <h3>I will Do Coding and Change The World</h3>
-            <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic operators power applications.</p>
-          </div>
-          <div>
-            <img src="./assets/Layer_1.png" alt="">
-        </div>
-        </div>
-        <div class="why-web-development">
-           <div>
-            <img src="./assets/Group 3.png" alt="">
-           </div>
-           <div>
-            <h3>I will Do Coding and Change The World</h3>
-            <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic operators power applications.</p>
-           </div>
+
+            <div>
+                <h3>I will Do Coding and Change The World</h3>
+                <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and
+                    arithmetic operators power applications.</p>
+            </div>
+            <div>
+                <img src="./assets/Layer_1.png" alt="">
+            </div>
         </div>
         <div class="why-web-development">
-           
-           <div>
-            <h3>I will Do Coding and Change The World</h3>
-            <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic operators power applications.</p>
-           </div>
-           <div>
-            <img src="./assets/Group 4.png" alt="">
-           </div>
+            <div>
+                <img src="./assets/Group 3.png" alt="">
+            </div>
+            <div>
+                <h3>I will Do Coding and Change The World</h3>
+                <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and
+                    arithmetic operators power applications.</p>
+            </div>
+        </div>
+        <div class="why-web-development">
+
+            <div>
+                <h3>I will Do Coding and Change The World</h3>
+                <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and
+                    arithmetic operators power applications.</p>
+            </div>
+            <div>
+                <img src="./assets/Group 4.png" alt="">
+            </div>
         </div>
     </div>
     <div id="my-inspiration">
         <h3>My Inspiration</h3>
-        <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power applications</p>
-        <iframe width="1200" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=-BuUMWz1xrx4qTnh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
+            applications</p>
+        <iframe width="1200" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=-BuUMWz1xrx4qTnh"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
-       <div>
-        <h3>My Current Target</h3>
-        <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power applications</p>
-       </div>
-       <div>
-        <img src="./assets/react.png" alt="">
         <div>
-            <h4>React JS</h4>
-            <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power applications</p>
-            <a href="https://react.dev/"></a>
+            <h3>My Current Target</h3>
+            <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
+                applications</p>
         </div>
-        <img src="./assets/react.png" alt="">
         <div>
-            <h4>NodeJs</h4>
-            <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power applications</p>
-            <a href="https://react.dev/"></a>
+            <div class="terget-tec">
+                <img src="./assets/react.png" alt="" class="tec-img" width="7%" height="6%">
+                <div>
+                    <h4>React JS</h4>
+                    <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators
+                        power
+                        applications</p>
+                    <a href="https://react.dev/">Learn More</a>
+                </div>
+            </div>
+            <div class="terget-tec">
+                <img src="./assets/nodejs.png" alt="" class="tec-img" width="7%" height="6%">
+                <div>
+                    <h4>NodeJs</h4>
+                    <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators
+                        power
+                        applications</p>
+                    <a href="https://nodejs.org/en/download/package-manager">Learn More</a>
+                </div>
+            </div >
+            <div class="terget-tec">
+                <img src="./assets/mongodb.png" alt="" class="tec-img" width="7%" height="6%">
+                <div>
+                    <h4>MongoDB</h4>
+                    <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators
+                        power
+                        applications</p>
+                    <a href="https://www.mongodb.com/">Learn More</a>
+                </div>
+            </div>
         </div>
-        <img src="./assets/react.png" alt="">
-        <div>
-            <h4>MongoDB</h4>
-            <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power applications</p>
-            <a href="https://react.dev/"></a>
-        </div>
-       </div>
 
     </div>
 </body>
+
 </html>
