--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div>
-        <div>
+        <div id="current-target">
             <h3>My Current Target</h3>
             <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
                 applications</p>
