--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
         </div>
 
     </div>
+    <div>
+        <h2>I need Support</h2>
+        <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic operators power applications</p>
+        <form>
+            <input type="text" name="" id="">
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    <footer>
+        <h3>An Open Commitment by Awlad Hossain</h3>
+        <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a>
+        <a href="https://github.com/"><img src="./assets/github.png" alt=""></a>
+        <a href="https://www.linkedin.com/uas/login?session_redirect=https%3A%2F%2Fwww.linkedin.com%2Fnotifications%2F%3Ffilter%3Dall"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+    </footer>
 </body>
 
 </html>
