footer align added

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
-    <div>
+    <div id="current-target-section">
         <div id="current-target">
             <h3>My Current Target</h3>
             <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
@@ -97,7 +97,7 @@
                         applications</p>
                     <a href="https://nodejs.org/en/download/package-manager">Learn More</a>
                 </div>
-            </div >
+            </div>
             <div class="terget-tec">
                 <img src="./assets/mongodb.png" alt="" class="tec-img" width="7%" height="6%">
                 <div>
@@ -111,19 +111,24 @@
         </div>
 
     </div>
-    <div>
+    <div id="form-support">
         <h2>I need Support</h2>
-        <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic operators power applications</p>
+        <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic
+            operators power applications</p>
         <form>
-            <input type="text" name="" id="">
-            <input type="submit" value="Submit">
+            <input type="text" name="" id="input-field" placeholder="Suggest me any feedback for me">
+            <input type="submit"  id="input-field-button" value="Submit">
         </form>
     </div>
     <footer>
         <h3>An Open Commitment by Awlad Hossain</h3>
-        <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a>
-        <a href="https://github.com/"><img src="./assets/github.png" alt=""></a>
-        <a href="https://www.linkedin.com/uas/login?session_redirect=https%3A%2F%2Fwww.linkedin.com%2Fnotifications%2F%3Ffilter%3Dall"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+        <div>
+            <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a>
+            <a href="https://github.com/"><img src="./assets/github.png" alt=""></a>
+            <a
+                href="https://www.linkedin.com/uas/login?session_redirect=https%3A%2F%2Fwww.linkedin.com%2Fnotifications%2F%3Ffilter%3Dall"><img
+                    src="./assets/linkedin-icon 1.png" alt=""></a>
+        </div>
     </footer>
 </body>
 
