--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <h1>"In the near future, I hope to become a Developer."</h1>
         <p>Passionate Aspiring Developer | Crafting Code and Dreams | Exploring the Digital Frontier | Building
             Tomorrow's Solutions</p>
-        <button id="contact-button">Contact with me</button>
+        <button id="contact-button"><a href="#footer-sec">Contact with me</a></button>
+        <!-- <a id="contact-button" href="#footer-sec">Contact with me</a> -->
     </div>
     <div id="why-webdevlopment-section">
         <div id="web-dev-header">
@@ -66,14 +67,44 @@
         <h3>My Inspiration</h3>
         <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
             applications</p>
-        <iframe width="1200" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=-BuUMWz1xrx4qTnh"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       <div id="youtube-link">
+        <iframe  width="1200" height="550" src="https://www.youtube.com/embed/S-gIFz-uYNw?si=-BuUMWz1xrx4qTnh"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+    </div>
+    <div>
+        <div id="current-target-html-css-js">
+            <h3>My Current Target</h3>
+            <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
+                applications</p>
+        </div>
+        <div id="html-css-js">
+            <div>
+                <img src="./assets/html.png" alt="">
+                <p>HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning
+                    and structure of web content. </p>
+                <a href="https://www.w3schools.com/html/">Learn More</a>
+            </div>
+            <div>
+                <img src="./assets/css.png" alt="">
+                <p>Cascading Style Sheets.CSS is a stylesheet language.It enables changes to fonts, colors, sizes,
+                    spacing, column layouts, and animations.</p>
+                <a href="https://www.w3schools.com/html/">Learn More</a>
+            </div>
+            <div>
+                <img src="./assets/js.png" alt="">
+                <p>JavaScript (JS) is a lightweight interpreted (or just-in-time compiled) programming language with
+                    first-class functions.</p>
+                <a href="https://www.w3schools.com/html/">Learn More</a>
+            </div>
+        </div>
+
     </div>
     <div id="current-target-section">
         <div id="current-target">
-            <h3>My Current Target</h3>
+            <h3>My Next Target</h3>
             <p>Transforming the world, one line at a time. Algorithms solve problems and arithmetic operators power
                 applications</p>
         </div>
@@ -111,16 +142,17 @@
         </div>
 
     </div>
+
     <div id="form-support">
         <h2>I need Support</h2>
-        <p>Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic
+        <p id="form-description">Transforming the world, one line at a time. Algorithms solve problems, arrays group variables, and arithmetic
             operators power applications</p>
         <form>
             <input type="text" name="" id="input-field" placeholder="Suggest me any feedback for me">
-            <input type="submit"  id="input-field-button" value="Submit">
+            <input type="submit" id="input-field-button" value="Submit">
         </form>
     </div>
-    <footer>
+    <footer id="footer-sec">
         <h3>An Open Commitment by Awlad Hossain</h3>
         <div>
             <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt=""></a>
